# text-sanitizer-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  lanzarote-com_de-ausfluge.html
.github/workflows/: compiler-versions.yml  debian-testing.yml  publish_release.yml  testing.yml
examples/: ascii-heart.rs  nut-monitor.rs
sanitizer-lib/: Cargo.toml
sanitizer-lib/src/: sanitizer.rs
scripts/: cargo_version.py  find_version_commit.pl  find_version_commit.py
src/: app.rs  lib.rs  main.rs
tests/: file_tests.rs  integration_test.rs  lanzarote-com_de-ausfluge.html.x100  server_access_sheat.txt  ups_event.rs
tests/data/: lanzarote-com_de-ausfluge_result.html  nut-monitor_status.txt  nut-monitor_status_result.txt  server_access_sheat_result.txt  test-data.txt  test-data_result.txt  yum-history_list.txt  yum-history_list_result.txt
text-sanitizer/: Cargo.toml  README.md
text-sanitizer/doc/: crates.js  search-index.js  settings.html  source-files.js
text-sanitizer/doc/sanitizer/: all.html  fn.build_unicode.html  fn.from_utf8_lossy.html  fn.parse_unicode.html  fn.sanitize_string.html  fn.sanitize_u8.html  index.html  sidebar-items.js
text-sanitizer/doc/src/sanitizer/: sanitizer.rs.html
text-sanitizer/src/: lib.rs  sanitizer.rs
text-sanitizer/tests/: file_tests.rs  integration_test.rs
text-sanitizer_app/: Cargo.toml
text-sanitizer_app/examples/: nut-monitor.rs
text-sanitizer_app/src/: app.rs  lib.rs  main.rs
