[package]
name = "text-sanitizer"
version = "1.5.3"
authors = ["Bodo Hugo Barwich <b.barwich@hotmail.com>"]
edition = "2018"
description = "convert text to plain ASCII text"
readme = "README.md"
homepage = "https://github.com/bodo-hugo-barwich/text-sanitizer-rs"
documentation = "https://docs.rs/text-sanitizer/latest/text_sanitizer/"
repository = "https://github.com/bodo-hugo-barwich/text-sanitizer-rs"
license = "Apache-2.0"
keywords = ["text-processing", "utf-8", "unicode", "ascii", "sanitizing" ]
categories = ["text-processing", "parsing"]
exclude = ["/doc"]