[package]
name = "text-sanitizer_app"
version = "1.2.0"
authors = ["Bodo Hugo Barwich <b.barwich@hotmail.com>"]
edition = "2018"
description = "command line application to convert text to plain ASCII text"
readme = "../README.md"
homepage = "https://github.com/bodo-hugo-barwich/text-sanitizer-rs"
documentation = "https://github.com/bodo-hugo-barwich/text-sanitizer-rs"
repository = "https://github.com/bodo-hugo-barwich/text-sanitizer-rs"
license = "Apache-2.0"
keywords = ["text-processing", "utf-8", "unicode", "ascii", "sanitizing" ]
categories = ["command-line-utilities", "command-line-interface", "text-processing", "parsing"]

[lib]
name = "sanitizer_app"
path = "src/lib.rs"

[[bin]]
name = "text-sanitizer"
path = "src/main.rs"

[[example]]
name = "nut-monitor"

[dependencies]
text-sanitizer = { path = "../text-sanitizer", version = "1.4" }
